feat: выполнить дз-2

--- a/src/entities/post/ui/PostCard.module.css
+++ b/src/entities/post/ui/PostCard.module.css
@@ -4,6 +4,10 @@
     padding: 1.25rem;
 }
 
+:global(.dark) .post-card {
+    color: #ffffff;
+}
+
 .post-card:not(:last-child) {
     margin-bottom: 1rem;
 }
