--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,10 @@ body {
     min-height: 100vh;
 }
 
+body.dark {
+    background-color: #000000;
+}
+
 #root {
     min-height: 100vh;
     display: flex;
@@ -17,4 +21,12 @@ body {
     padding-right: 0.5rem;
     margin-left: auto;
     margin-right: auto;
+}
+
+a {
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: none;
 }
