--- a/src/styles.css
+++ b/src/styles.css
@@ -1,9 +1,11 @@
 body {
     margin: 0;
     min-height: 100vh;
+    color: #000000;
 }
 
 body.dark {
+    color: #ffffff;
     background-color: #000000;
 }
 
