--- a/src/widgets/PhotoList/PhotoList.module.css
+++ b/src/widgets/PhotoList/PhotoList.module.css
@@ -3,16 +3,7 @@
     flex-wrap: wrap;
     gap: 1rem;
     margin-bottom: 1rem;
-}
-
-.photo-list__item-wrapper {
-    width: calc(25% - (1rem * 4) / 5);
-    aspect-ratio: 1 / 1;
-    background-color: rgba(8, 126, 164, .1);
-}
-
-.photo-list__item {
-    width: 100%;
-    max-width: 100%;
-    display: block;
+    padding-left: 0;
+    margin-top: 0;
+    list-style: none;
 }
